--- a/index.html
+++ b/index.html
@@ -1,2 +1,51 @@
-Hello World
-My name is ktakuya
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ktakuya</title>
+    <style>
+        html {height: 100%;}
+        body {
+            color: #fff;
+            font-family: 'Lobster', "helvetica", cursive;
+            text-align: center;
+            height: 100%;
+            /*line-height: 1.5em;*/
+        }
+        .content{
+            margin-top: 20%;
+        }
+        .content h1 {
+            font-size: 55px;
+            line-height: 55px;
+            color: #4f5963;
+        }
+
+
+        .icon {
+            margin: 1em, 0, 0, 0;
+        }
+
+        
+        a {
+            color: #0881b3;
+            /*margin: 1em, 0, 0, 0;*/
+            text-decoration: none;
+        }
+        a:hover {
+            color: #4f5963;
+            border: none;
+        }
+    </style>
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="content">
+        <h1 >I'm ktakuya.</h1>
+
+        <span class="icon"><a href="http://github.com/ktakuya" class="fa fa-github fa-2x"></a></span>
+        <span class="icon"><a href="http://twitter.com/taku__9" class="fa fa-twitter fa-2x"></a></span>
+    </div>
+</body>
+</html>
