Remove margin and unused codes

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
             font-family: 'Lobster', "helvetica", cursive;
             text-align: center;
             height: 100%;
-            /*line-height: 1.5em;*/
+            margin: 0;
         }
+
         .content{
             margin-top: 20%;
         }
+
         .content h1 {
             font-size: 55px;
             line-height: 55px;
             color: #4f5963;
         }
 
-
         .icon {
             margin: 1em, 0, 0, 0;
         }
 
-        
         a {
             color: #0881b3;
-            /*margin: 1em, 0, 0, 0;*/
             text-decoration: none;
         }
+
         a:hover {
             color: #4f5963;
             border: none;
